--- a/app/src/main/res/layout/calendar_row.xml
+++ b/app/src/main/res/layout/calendar_row.xml
@@ -20,7 +20,8 @@
             android:text="1"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/monday_number"
@@ -30,7 +31,8 @@
             android:text="2"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/tuesday_number"
@@ -40,7 +42,8 @@
             android:text="3"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/wednesday_number"
@@ -50,7 +53,8 @@
             android:text="4"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/thursday_number"
@@ -60,7 +64,8 @@
             android:text="5"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/friday_number"
@@ -70,7 +75,8 @@
             android:text="6"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/saturday_number"
@@ -80,7 +86,8 @@
             android:text="7"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
     </LinearLayout>
 
     <ScrollView
@@ -108,56 +115,64 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0" />
+                    app:layout_constraintGuide_percent="0"
+                    android:visibility="visible"/>
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/x1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.143" />
+                    app:layout_constraintGuide_percent="0.143"
+                    android:visibility="visible"/>
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/x2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.286" />
+                    app:layout_constraintGuide_percent="0.286"
+                    android:visibility="visible"/>
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/x3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.429" />
+                    app:layout_constraintGuide_percent="0.429"
+                    android:visibility="visible"/>
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/x4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.571" />
+                    app:layout_constraintGuide_percent="0.571"
+                    android:visibility="visible"/>
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/x5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.714" />
+                    app:layout_constraintGuide_percent="0.714"
+                    android:visibility="visible"/>
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/x6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.857" />
+                    app:layout_constraintGuide_percent="0.857"
+                    android:visibility="visible"/>
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/x7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="1.00" />
+                    app:layout_constraintGuide_percent="1.00"
+                    android:visibility="visible"/>
 
                 //Horizontal GridLines for placing events/reminders on the same day
 
