--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             android:paddingLeft="8dp"
             android:text="@string/enter_start_date"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:editable = "false"/>
 
         <EditText
             android:id="@+id/startDate"
@@ -59,7 +60,8 @@
             android:paddingLeft="8dp"
             android:text="@string/enter_end_date"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:editable = "false"/>
 
         <EditText
             android:id="@+id/endDate"
