--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,5 +41,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="vertical_divider">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+        <item name="android:color">"#000000"</item>
+    </style>
 
 </resources>
