--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,7 +45,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">1dp</item>
         <item name="android:background">?android:attr/listDivider</item>
-        <item name="android:color">"#000000"</item>
+        <item name="android:color">#000000</item>
     </style>
 
 </resources>
