--- a/app/src/main/res/layout/calendar_row.xml
+++ b/app/src/main/res/layout/calendar_row.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@drawable/back">
+    android:background="@drawable/back"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/days_of_month"
@@ -21,7 +21,8 @@
             android:text="1"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/monday_number"
@@ -31,7 +32,8 @@
             android:text="2"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/tuesday_number"
@@ -41,7 +43,8 @@
             android:text="3"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/wednesday_number"
@@ -51,7 +54,8 @@
             android:text="4"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/thursday_number"
@@ -61,7 +65,8 @@
             android:text="5"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/friday_number"
@@ -71,7 +76,8 @@
             android:text="6"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
 
         <TextView
             android:id="@+id/saturday_number"
@@ -81,7 +87,8 @@
             android:text="7"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/back"/>
     </LinearLayout>
 
     <ScrollView
@@ -91,7 +98,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/events"
@@ -116,7 +123,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.14355232" />
+                    app:layout_constraintGuide_begin="59dp" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/x2"
