--- a/app/src/main/res/layout/calendar_row.xml
+++ b/app/src/main/res/layout/calendar_row.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/back"
+    android:background="@drawable/all_borders"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,77 +18,77 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.143"
+            android:background="@drawable/left_border_only"
             android:text="1"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:background="@drawable/back"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/monday_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.143"
+            android:background="@drawable/left_border_only"
             android:text="2"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:background="@drawable/back"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tuesday_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.143"
+            android:background="@drawable/left_border_only"
             android:text="3"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:background="@drawable/back"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/wednesday_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.143"
+            android:background="@drawable/left_border_only"
             android:text="4"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:background="@drawable/back"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/thursday_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.143"
+            android:background="@drawable/left_border_only"
             android:text="5"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:background="@drawable/back"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/friday_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.143"
+            android:background="@drawable/left_border_only"
             android:text="6"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:background="@drawable/back"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/saturday_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.143"
+            android:background="@drawable/left_border_only"
             android:text="7"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:background="@drawable/back"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <ScrollView
