--- a/app/src/main/res/layout/calendar_row.xml
+++ b/app/src/main/res/layout/calendar_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/all_borders"
@@ -9,86 +10,195 @@
     <LinearLayout
         android:id="@+id/days_of_month"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
+        android:layout_height="22dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/sunday_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.143"
-            android:background="@drawable/left_border_only"
-            android:text="1"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/monday_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.143"
-            android:background="@drawable/left_border_only"
-            android:text="2"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hx0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0" />
 
-        <TextView
-            android:id="@+id/tuesday_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.143"
-            android:background="@drawable/left_border_only"
-            android:text="3"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hx1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="352dp" />
 
-        <TextView
-            android:id="@+id/wednesday_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.143"
-            android:background="@drawable/left_border_only"
-            android:text="4"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hx2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.286" />
 
-        <TextView
-            android:id="@+id/thursday_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.143"
-            android:background="@drawable/left_border_only"
-            android:text="5"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hx3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.429" />
 
-        <TextView
-            android:id="@+id/friday_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.143"
-            android:background="@drawable/left_border_only"
-            android:text="6"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hx4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.571" />
 
-        <TextView
-            android:id="@+id/saturday_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.143"
-            android:background="@drawable/left_border_only"
-            android:text="7"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hx5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.714" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hx6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.857" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hx7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="1.00" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hy0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/hy1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="1.0" />
+
+            <TextView
+                android:id="@+id/sunday_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.143"
+                android:background="@drawable/left_border_only"
+                android:text="1"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/hy1"
+                app:layout_constraintLeft_toLeftOf="@id/hx0"
+                app:layout_constraintRight_toRightOf="@id/hx1"
+                app:layout_constraintTop_toTopOf="@id/hy0" />
+
+            <TextView
+                android:id="@+id/monday_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.143"
+                android:background="@drawable/left_border_only"
+                android:text="2"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="411dp"
+                app:layout_constraintBottom_toBottomOf="@id/hy1"
+                app:layout_constraintLeft_toLeftOf="@id/hx1"
+                app:layout_constraintRight_toRightOf="@id/hx2"
+                app:layout_constraintTop_toTopOf="@id/hy0" />
+
+            <TextView
+                android:id="@+id/tuesday_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.143"
+                android:background="@drawable/left_border_only"
+                android:text="3"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="411dp"
+                app:layout_constraintBottom_toBottomOf="@id/hy1"
+                app:layout_constraintLeft_toLeftOf="@id/hx2"
+                app:layout_constraintRight_toRightOf="@id/hx3"
+                app:layout_constraintTop_toTopOf="@id/hy0" />
+
+            <TextView
+                android:id="@+id/wednesday_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.143"
+                android:background="@drawable/left_border_only"
+                android:text="4"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="411dp"
+                app:layout_constraintBottom_toBottomOf="@id/hy1"
+                app:layout_constraintLeft_toLeftOf="@id/hx3"
+                app:layout_constraintRight_toRightOf="@id/hx4"
+                app:layout_constraintTop_toTopOf="@id/hy0" />
+
+            <TextView
+                android:id="@+id/thursday_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.143"
+                android:background="@drawable/left_border_only"
+                android:text="5"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="411dp"
+                app:layout_constraintBottom_toBottomOf="@id/hy1"
+                app:layout_constraintLeft_toLeftOf="@id/hx4"
+                app:layout_constraintRight_toRightOf="@id/hx5"
+                app:layout_constraintTop_toTopOf="@id/hy0" />
+
+            <TextView
+                android:id="@+id/friday_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.143"
+                android:background="@drawable/left_border_only"
+                android:text="6"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="411dp"
+                app:layout_constraintBottom_toBottomOf="@id/hy1"
+                app:layout_constraintLeft_toLeftOf="@id/hx5"
+                app:layout_constraintRight_toRightOf="@id/hx6"
+                app:layout_constraintTop_toTopOf="@id/hy0" />
+
+            <TextView
+                android:id="@+id/saturday_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.143"
+                android:background="@drawable/left_border_only"
+                android:text="7"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="411dp"
+                app:layout_constraintBottom_toBottomOf="@id/hy1"
+                app:layout_constraintLeft_toLeftOf="@id/hx6"
+                app:layout_constraintRight_toRightOf="@id/hx7"
+                app:layout_constraintTop_toTopOf="@id/hy0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
     <ScrollView
